tests/negative/runtime/byteat_utf8_past_end/input.ci
void main() {
    print(toString(byteAt("é", 2)) + "\n");
}
